# dancing

./: .gitattributes  CMakeLists.txt  Makefile  README.md  basic.c  dancing.c  dancing.h  dancing_threads.c  dancing_threads.h  extarray.h  pentominoes.c  queens.c  sudoku.c
src/: CMakeLists.txt
src/dancing/: CMakeLists.txt  basic.c  dancing.c  dancing_threads.c
src/examples/: CMakeLists.txt  pentominoes.c  sudoku.c
src/include/: basic.h  dancing.h  dancing_threads.h  extarray.h  segarray.h
src/tests/: CMakeLists.txt  matrix_tests.c
